--- a/src/FXMLDocument.fxml
+++ b/src/FXMLDocument.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="beyn_spell.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="585.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLDocumentController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
+      <Button fx:id="buttonRun" alignment="CENTER" contentDisplay="CENTER" layoutX="450.0" layoutY="77.0" mnemonicParsing="false" onAction="#Event" prefHeight="41.0" prefWidth="91.0" text="Run" />
+      <TextField fx:id="inputUrl" alignment="CENTER" layoutX="337.0" layoutY="23.0" prefHeight="41.0" prefWidth="317.0" promptText="ex : http://10.234.34.189:8080/admin/auth/" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="267.0" layoutY="28.0" prefHeight="32.0" prefWidth="62.0" text="Url :" textAlignment="CENTER" />
+      <Label fx:id="labelParsed" alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Number of elements parsed :" textAlignment="CENTER" />
+      <Label fx:id="labelState" alignment="CENTER" contentDisplay="CENTER" layoutX="342.0" layoutY="128.0" prefHeight="50.0" prefWidth="308.0" text="State : " textAlignment="CENTER" wrapText="true" />
+      <Label fx:id="labelCorrect" alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="260.0" prefHeight="41.0" prefWidth="199.0" text="Number of correct  elements :" textAlignment="CENTER" />
+      <Label fx:id="labelSpell" alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="260.0" prefHeight="41.0" prefWidth="199.0" text="Number of spell erros :" textAlignment="CENTER" />
+      <Label fx:id="labelGrammar" alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Number of Grammar errors :" textAlignment="CENTER" />
+      <ScrollPane fx:id="scrollPane" layoutX="19.0" layoutY="314.0" prefHeight="265.0" prefWidth="954.0">
+         <content>
+            <TextFlow fx:id="areaResult" prefHeight="263.0" prefWidth="955.0" textAlignment="CENTER" />
+         </content>
+      </ScrollPane>
     </children>
 </AnchorPane>
