--- a/src/FXMLDocument.fxml
+++ b/src/FXMLDocument.fxml
@@ -8,17 +8,15 @@
 
 <AnchorPane id="AnchorPane" prefHeight="585.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLDocumentController">
     <children>
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
       <Button fx:id="buttonRun" alignment="CENTER" contentDisplay="CENTER" layoutX="450.0" layoutY="77.0" mnemonicParsing="false" onAction="#Event" prefHeight="41.0" prefWidth="91.0" text="Run" />
-      <Label fx:id="labelParsed" alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Number of elements parsed :" textAlignment="CENTER" />
+      <Label fx:id="labelParsed" alignment="CENTER" contentDisplay="CENTER" layoutX="95.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Nombre Total :" textAlignment="CENTER" />
       <Label fx:id="labelState" alignment="CENTER" contentDisplay="CENTER" layoutX="342.0" layoutY="128.0" prefHeight="50.0" prefWidth="308.0" text="State : " textAlignment="CENTER" wrapText="true" />
-      <Label fx:id="labelCorrect" alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="260.0" prefHeight="41.0" prefWidth="199.0" text="Number of correct  elements :" textAlignment="CENTER" />
-      <Label fx:id="labelSpell" alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="260.0" prefHeight="41.0" prefWidth="199.0" text="Number of spell erros :" textAlignment="CENTER" />
-      <Label fx:id="labelGrammar" alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Number of Grammar errors :" textAlignment="CENTER" />
+      <Label fx:id="labelCorrect" alignment="CENTER" contentDisplay="CENTER" layoutX="397.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Nombre Correcte :" textAlignment="CENTER" />
       <ScrollPane fx:id="scrollPane" layoutX="19.0" layoutY="314.0" prefHeight="265.0" prefWidth="954.0">
          <content>
             <TextFlow fx:id="areaResult" prefHeight="263.0" prefWidth="955.0" textAlignment="CENTER" />
          </content>
       </ScrollPane>
+      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="700.0" layoutY="219.0" prefHeight="41.0" prefWidth="199.0" text="Nombre Erreurs :" textAlignment="CENTER" />
     </children>
 </AnchorPane>
