--- a/src/main/resources/io/pal/spell/FXMLDocument.fxml
+++ b/src/main/resources/io/pal/spell/FXMLDocument.fxml
@@ -3,13 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane id="AnchorPane" prefHeight="914.0" prefWidth="1282.0" style="-fx-background-color: #1c1b1b;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.beyn.spell.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="914.0" prefWidth="1282.0" style="-fx-background-color: #1c1b1b;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.pal.spell.FXMLDocumentController">
     <children>
       <Button fx:id="buttonRun" alignment="CENTER" contentDisplay="CENTER" layoutX="446.0" layoutY="68.0" mnemonicParsing="false" onAction="#Event" prefHeight="63.0" prefWidth="164.0" stylesheets="@styleRun.css" text="Exécuter" textAlignment="CENTER" textFill="WHITE">
          <font>
@@ -79,16 +77,6 @@
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Button>
-      <ImageView fitHeight="119.0" fitWidth="115.0" layoutX="15.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@beyn_logo.png" />
-         </image>
-      </ImageView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="130.0" prefHeight="26.0" prefWidth="78.0" text="Beta version" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
       <Button fx:id="buttonStop" alignment="CENTER" contentDisplay="CENTER" layoutX="446.0" layoutY="68.0" mnemonicParsing="false" onAction="#Event" prefHeight="63.0" prefWidth="164.0" stylesheets="@styleRun.css" text="Arrêter" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="24.0" />
